--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-
 # Created by https://www.toptal.com/developers/gitignore
 #para descachear archivos y quitarlos del repo git rm -r --cache archivo
 
 #archivo de prueba
 prueba.py
+
+#archivos redux
+./frontend/src/redux
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
